@@ -7,3 +7,12 @@
 .sign-up-btn:hover {
   background-color: #414141;
 }
+
+.gp__sign-in-text {
+  padding-bottom: 2px;
+}
+
+.gp__sign-in-text:hover {
+  border-bottom: 2px solid #000;
+  color: #414141;
+}
