@@ -24,7 +24,7 @@
         </a>
 
         <div class="navbar-nav float-end px-5 gap-3 fw-bold fs-6 align-items-center">
-            <a class="nav-link" routerLink="user-login">Sign In</a>
+            <a class="nav-link text-black gp__sign-in-text" routerLink="user-login">Sign In</a>
             <button type="button" routerLink="user-registration" class="btn btn-dark sign-up-btn fw-bold fs-6">Sign
                 Up</button>
             <div class="dropdown">
